--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
+  <meta name="google-site-verification" content="we1ysT7PT980YHpbQHEjoognFyzp0_xtgK47rIzgUsg" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cómo cuidar un Pastor Alemán</title>
   <meta name="description" content="Guía práctica para cuidar un Pastor Alemán: alimentación, ejercicio, salud, entrenamiento e higiene." />
